--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Seonmoro by slideep</title>
+    <title>SeOnMoro by slideep</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -18,10 +18,9 @@
 
   </head>
   <body>
-
       <div id="header">
         <nav>
-          <li class="fork"><a href="https://github.com/slideep/seonmoro">Fork On GitHub</a></li>
+          <li class="fork"><a href="https://github.com/slideep/seonmoro">View On GitHub</a></li>
           <li class="downloads"><a href="https://github.com/slideep/seonmoro/zipball/master">ZIP</a></li>
           <li class="downloads"><a href="https://github.com/slideep/seonmoro/tarball/master">TAR</a></li>
           <li class="title">DOWNLOADS</li>
@@ -32,42 +31,42 @@
 
       <section>
         <div id="title">
-          <h1>Seonmoro</h1>
+          <h1>SeOnMoro</h1>
           <p>Se on moro!</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/slideep">slideep</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/#!/michigangraham">mattgraham</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
 
-        <h3>Welcome to GitHub Pages.</h3>
+        <h1>
+<a name="seonmoro" class="anchor" href="#seonmoro"><span class="octicon octicon-link"></span></a>SeOnMoro</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<hr><p><a href="http://seonmoro.azurewebsites.net">SeOnMoro!</a></p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<p>This SPA provides an mechanism for pulling last minute flight/holiday offers
+from multiple Finnish travel agencies. The site has an interface for communicating 
+with plethora of sites and last minute deals are gathered and shown to user in a 
+smart, simple and accessible view.</p>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>After choosing a deal that You, the user likes, you'll be redirected onto the 
+travel agency's site for the final booking process.</p>
 
-<h3>Designer Templates</h3>
+<p>When, where, one or two weeks, how much? Book. Head for the sun.</p>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact support@github.com and we’ll help you sort it out.</p>
+<ul>
+<li>Ruby</li>
+<li>REST (XML, JSON)</li>
+<li>MongoDB</li>
+<li>Node.js</li>
+<li>jQuery Mobile</li>
+<li>HTML5, CSS3</li>
+<li>Lucene</li>
+<li>Twitter</li>
+</ul>
       </section>
 
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><!--<![endif]-->
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+    
   </body>
 </html>
